SERVER-18859 Don't access thread name's thread_local before dynamic init is complete